<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- mad strings -->

	<string name="app_name">Page 1</string>
	<string name="ek_img_content">ExportKit Image</string>
	<string name="_don_t_have_an_account__register_string">Dont have an account? Register</string>
	<string name="forgot_password__string">Forgot Password?</string>
	<string name="youremailaddress_gmail_com_string">youremailaddress@gmail.com </string>
	<string name="login_ek3_string">Login</string>
	<string name="password_string">Password</string>
	<string name="email_id_string">Email ID</string>
	<string name="w_e_l_c_o_m_e___string">W E L C O M E !</string>
	<string name="_already_have_an_account__login_string">Already have an account? Login</string>
	<string name="youremailaddress_gmail_com_ek1_string">youremailaddress@gmail.com </string>
	<string name="iete_string">Iete</string>
	<string name="register_ek3_string">Register</string>
	<string name="password_ek1_string">Password</string>
	<string name="email_id_ek1_string">Email ID</string>
	<string name="name_string">Name</string>
	<string name="search_location_string">Search Location</string>
	<string name="previous_search_results_string">Previous search results</string>
	<string name="my_favourite_string">My Favourite</string>
	<string name="login_ek4_string">Login</string>
	<string name="upcoming_alarms_string">Upcoming alarms</string>
	<string name="search_location_ek1_string">Search Location</string>
	<string name="previous_search_results_ek1_string">Previous search results</string>
	<string name="my_favourites_string">My Favourites</string>
	<string name="logout_string">Logout</string>
	<string name="upcoming_alarms_ek1_string">Upcoming alarms</string>
	<string name="navratna_i_string">Navratna I</string>
	<string name="navratna_hotel_string">Navratna Hotel</string>
	<string name="navratna_hotel_ek1_string">Navratna Hotel</string>
	<string name="lorem_ipsum_dolor_sit_amet_________string">Lorem ipsum dolor sit amet,.......</string>
	<string name="lorem_ipsum_dolor_sit_amet_________ek1_string">Lorem ipsum dolor sit amet,.......</string>
	<string name="lorem_ipsum_dolor_sit_amet_________ek2_string">Lorem ipsum dolor sit amet,.......</string>
	<string name="lorem_ipsum_dolor_sit_amet_________ek3_string">Lorem ipsum dolor sit amet,.......</string>
	<string name="choose_on_map_string">Choose on map </string>
	<string name="map_string">Map</string>
	<string name="navratna_veg_restaurant_string">Navratna Veg Restaurant</string>
	<string name="navratna_co_operative_h____string">Navratna Co Operative H...</string>
	<string name="logout_ek1_string">Logout</string>
	<string name="navratna_i_ek1_string">Navratna I</string>
	<string name="navratna_hotel_ek2_string">Navratna Hotel</string>
	<string name="navratna_hotel_ek3_string">Navratna Hotel</string>
	<string name="lorem_ipsum_dolor_sit_amet_________ek4_string">Lorem ipsum dolor sit amet,.......</string>
	<string name="lorem_ipsum_dolor_sit_amet_________ek5_string">Lorem ipsum dolor sit amet,.......</string>
	<string name="lorem_ipsum_dolor_sit_amet_________ek6_string">Lorem ipsum dolor sit amet,.......</string>
	<string name="lorem_ipsum_dolor_sit_amet_________ek7_string">Lorem ipsum dolor sit amet,.......</string>
	<string name="choose_on_map_ek1_string">Choose on map </string>
	<string name="map_ek1_string">Map</string>
	<string name="navratna_veg_restaurant_ek1_string">Navratna Veg Restaurant</string>
	<string name="navratna_co_operative_h____ek1_string">Navratna Co Operative H...</string>
	<string name="navratna_i_ek2_string">Navratna I</string>
	<string name="navratna_hotel_ek4_string">Navratna Hotel</string>
	<string name="navratna_hotel_ek5_string">Navratna Hotel</string>
	<string name="lorem_ipsum_dolor_sit_amet_________ek8_string">Lorem ipsum dolor sit amet,.......</string>
	<string name="lorem_ipsum_dolor_sit_amet_________ek9_string">Lorem ipsum dolor sit amet,.......</string>
	<string name="lorem_ipsum_dolor_sit_amet_________ek10_string">Lorem ipsum dolor sit amet,.......</string>
	<string name="lorem_ipsum_dolor_sit_amet_________ek11_string">Lorem ipsum dolor sit amet,.......</string>
	<string name="choose_on_map_ek2_string">Choose on map </string>
	<string name="map_ek2_string">Map</string>
	<string name="navratna_veg_restaurant_ek2_string">Navratna Veg Restaurant</string>
	<string name="navratna_co_operative_h____ek2_string">Navratna Co Operative H...</string>
	<string name="logout_ek2_string">Logout</string>
	<string name="navratna_i_ek3_string">Navratna I</string>
	<string name="navratna_hotel_ek6_string">Navratna Hotel</string>
	<string name="navratna_hotel_ek7_string">Navratna Hotel</string>
	<string name="lorem_ipsum_dolor_sit_amet_________ek12_string">Lorem ipsum dolor sit amet,.......</string>
	<string name="lorem_ipsum_dolor_sit_amet_________ek13_string">Lorem ipsum dolor sit amet,.......</string>
	<string name="lorem_ipsum_dolor_sit_amet_________ek14_string">Lorem ipsum dolor sit amet,.......</string>
	<string name="lorem_ipsum_dolor_sit_amet_________ek15_string">Lorem ipsum dolor sit amet,.......</string>
	<string name="choose_on_map_ek3_string">Choose on map </string>
	<string name="map_ek3_string">Map</string>
	<string name="navratna_veg_restaurant_ek3_string">Navratna Veg Restaurant</string>
	<string name="navratna_co_operative_h____ek3_string">Navratna Co Operative H...</string>
	<string name="navratna_hotel__415__pedest___string">Navratna Hotel, 415, pedest..</string>
	<string name="navratna_hotel_ek8_string">Navratna Hotel</string>
	<string name="restaurant_string">Restaurant   </string>
	<string name="open_string">Open</string>
	<string name="directions_string">Directions</string>
	<string name="favourite_string">Favourite</string>
	<string name="add_to_list_string">Add to list</string>
	<string name="add_note_string">Add note</string>
	<string name="navratna_hotel__415__pedest___ek1_string">Navratna Hotel, 415, pedest..</string>
	<string name="navratna_hotel_ek9_string">Navratna Hotel</string>
	<string name="restaurant_closes_12am_string">Restaurant    Closes 12AM</string>
	<string name="open_ek1_string">Open</string>
	<string name="directions_ek1_string">Directions</string>
	<string name="add_to_favourite_string">Add to Favourite</string>
	<string name="add_to_list_ek1_string">Add to list</string>
	<string name="add_note__eg__time__activity__string">Add note (eg. time, activity)</string>
	<string name="select_payment_method_string">Select Payment Method</string>
	<string name="my_favourite_places_string">My Favourite Places</string>
	<string name="location_2_string">Location 2</string>
	<string name="location_3_string">Location 3</string>
	<string name="add_new_location_string">Add new location</string>
	<string name="navratna_hotel_ek10_string">Navratna Hotel</string>
	<string name="note__lorem_ipsum_dolor_sit_amet__consectetur_adipiscing_elit__string">Note: Lorem ipsum dolor sit amet,        consectetur adipiscing elit.</string>
	<string name="select_payment_method_ek1_string">Select Payment Method</string>
	<string name="today_s_relarms_string">Todays Relarms</string>
	<string name="navratna_hotel_ek11_string">Navratna Hotel</string>
	<string name="location_2_ek1_string">Location 2</string>
	<string name="add_new_location_ek1_string">Add new location</string>
	<string name="note__lorem_ipsum_dolor_sit_amet__consectetur_adipiscing_elit__ek1_string">Note: Lorem ipsum dolor sit amet,        consectetur adipiscing elit.</string>
	<string name="select_payment_method_ek2_string">Select Payment Method</string>
	<string name="today_s_relarms_ek1_string">Todays Relarms</string>
	<string name="navratna_hotel_ek12_string">Navratna Hotel</string>
	<string name="location_2_ek2_string">Location 2</string>
	<string name="add_new_location_ek2_string">Add new location</string>
	<string name="note__lorem_ipsum_dolor_sit_amet__consectetur_adipiscing_elit__ek2_string">Note: Lorem ipsum dolor sit amet,        consectetur adipiscing elit.</string>
	<string name="select_payment_method_ek3_string">Select Payment Method</string>
	<string name="cancel_string">Cancel</string>
	<string name="click_a_picture_of_the_location_you_want_to_add_string">Click a picture of the locationyou want to add</string>
	<string name="add_loc____new_page____search_loc_open_camera____add_to_fav_string">Add loc -> new page -> search loc/open camera -> add to fav</string>
</resources>